--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "K-means method written on ES2015/TypeScript: (Clusterization)",
   "scripts": {
-    "install": "npm i -g tsd && npm i bower -g && npm i -g tsc && tsd install && npm i && bower i",
+    "install": "sudo npm i -g tsd && sudo npm i bower -g && sudo npm i -g tsc && sudo tsd install && sudo npm i && bower i",
     "start": "sudo tsc && sudo node app.js --harmony"
   },
   "repository": {
